第二天.txt
转义字符\      #‘\’本身也要转义 print（'\\')
\n  换行
\t  制表符    

print（r'\\\\') 格式r'' 里的内容不转义
 print('\\\n\\\\\\\n\\')
 \
\\\
\

多行 替换 /n
>>> print(‘'''1...2...3...4''')
ptint('''1...2...3...4''')                                       
>>> print('''line1
... line2
... line3''')
line1
line2
line3

...
...
...       ooo               oooo
...      o    o           o     oo
...     o  ##  o         o  ###    o
... o   o  ##   o          o #   o    oo
...       oooo              oooo
...    o  o                       o
...
...              $$$$$$$$ 
...             $$       $$
...             $$         $
...
...奇葩的错误# 改天研究一下为何这里变成这样没有>>> 变成了...
...
...  哦 有解释  注意在输入多行内容时，提示符由>>>变为...，提示你可以接着上一行输入。
...
...
...
...
...
...
... print('5')
  File "<stdin>", line 24
    print('5')
        ^
SyntaxError: invalid syntax
>>> print('5555')
5555
>>>恢复了233333
>>> print('''1
... 2
... 3
... 4
... 5
... 6
... 7
... 8
... 9
... 0
... 1''')                #正确示范

1
2
3
4
5
6
7
8
9
0
1